force-app/main/default/objects/TT_Acceptance_Criteria__c/TT_Acceptance_Criteria__c.object-meta.xml
<CustomObject>
    <label>TT Acceptance Criteria</label>
    <nameField>
        <displayFormat>AC-{000}</displayFormat>
        <label>TT Acceptance Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Acceptance Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>