force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Acceptance_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria_Name__c</fullName>
    <description>Short title: &quot;Admin can create CR from Case record&quot;</description>
    <inlineHelpText>Short title: &quot;Admin can create CR from Case record&quot;</inlineHelpText>
    <label>Acceptance Criteria Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>