force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Automated_By__c.field-meta.xml
<CustomField>
    <fullName>Automated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which automation record runs this test</description>
    <inlineHelpText>Which automation record runs this test</inlineHelpText>
    <label>Automated By</label>
    <referenceTo>TT_Automation__c</referenceTo>
    <relationshipLabel>TT Acceptance Criteria</relationshipLabel>
    <relationshipName>TT_Acceptance_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>