force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Failure_Notes__c.field-meta.xml
<CustomField>
    <fullName>Failure_Notes__c</fullName>
    <description>What failed and why — updated by test runner or QA reviewer</description>
    <inlineHelpText>What failed and why — updated by test runner or QA reviewer</inlineHelpText>
    <label>Failure Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>