force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Last_Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date_Time__c</fullName>
    <description>When was this AC last evaluated</description>
    <inlineHelpText>When was this AC last evaluated</inlineHelpText>
    <label>Last Run Date Time</label>
    <type>DateTime</type>
</CustomField>