force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Test_Reference__c.field-meta.xml
<CustomField>
    <fullName>Test_Reference__c</fullName>
    <description>Test class, method name, or CI job ID</description>
    <inlineHelpText>Test class, method name, or CI job ID</inlineHelpText>
    <label>Test Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>