force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/Then__c.field-meta.xml
<CustomField>
    <fullName>Then__c</fullName>
    <description>Expected outcome: &apos;Then a ChangeRequest is created with Source_Case__c populated and Status = New&apos;</description>
    <inlineHelpText>Expected outcome: &apos;Then a ChangeRequest is created with Source_Case__c populated and Status = New&apos;</inlineHelpText>
    <label>Then</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>