force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/TT_Story__c.field-meta.xml
<CustomField>
    <fullName>TT_Story__c</fullName>
    <label>TT Story</label>
    <referenceTo>TT_Story__c</referenceTo>
    <relationshipLabel>TT Acceptance Criteria</relationshipLabel>
    <relationshipName>TT_Acceptance_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>