force-app/main/default/objects/TT_Acceptance_Criteria__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <description>Action: &apos;When they click Create Change Request on the Case record&apos;</description>
    <inlineHelpText>Action: &apos;When they click Create Change Request on the Case record&apos;</inlineHelpText>
    <label>When</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>